--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,13 @@
           <version>1.0-SNAPSHOT</version>
         </dependency-->
 
+        <!--汉语转拼音-->
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
         <!--jwt 的token认证-->
 
         <dependency>
