--- a/pom.xml
+++ b/pom.xml
@@ -134,8 +134,31 @@
         </dependency-->
 
         <!--汉语转拼音-->
-        <!--jwt 的token认证-->
+        <!--<dependency>
+            <groupId>net.sourceforge.pinyin4j</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.0</version>
+        </dependency>-->
 
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext-asian</artifactId>
+            <version>5.2.0</version>
+        </dependency>
+        <!--设置pdf文件密码，还要引入下面bcprov-jdk15on.jar包：-->
+
+         <dependency>
+             <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+             <version>1.54</version>
+         </dependency>
+        <!--jwt 的token认证-->
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
@@ -185,6 +208,12 @@
             <artifactId>logback-classic</artifactId>
             <version>1.1.11</version>
         </dependency>-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>1.7.2</version>
+        </dependency>
+
 
         <!--mybatis-->
         <dependency>
