--- a/pom.xml
+++ b/pom.xml
@@ -134,11 +134,11 @@
         </dependency-->
 
         <!--汉语转拼音-->
-       <dependency>
-            <groupId>net.sourceforge.pinyin4j</groupId>
-            <artifactId>pinyin4j</artifactId>
-            <version>2.5.0</version>
-        </dependency>
+       <!--<dependency>-->
+            <!--<groupId>net.sourceforge.pinyin4j</groupId>-->
+            <!--<artifactId>pinyin4j</artifactId>-->
+            <!--<version>2.5.0</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>com.itextpdf</groupId>
