--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,4 @@
-#数据库配置文件
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/fushoujia?useUnicode=true&characterEncoding=utf8
+jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/fushoujia?useUnicode = true&characterEncoding = utf-8&useSSL = false&serverTimezone = GMT
 jdbc.username=root
 jdbc.password=admin
